--- a/Mad Stats/Card.storyboard
+++ b/Mad Stats/Card.storyboard
@@ -3,6 +3,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -14,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="CWm-FV-hg5" kind="relationship" relationship="rootViewController" id="slg-ob-9aO"/>
+                        <segue destination="3Tj-e6-012" kind="relationship" relationship="rootViewController" id="YxX-f3-nwT"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="89O-Sy-Es3" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -22,30 +24,76 @@
             <point key="canvasLocation" x="-56" y="500"/>
         </scene>
         <!--Statistics-->
-        <scene sceneID="cmE-ix-bbk">
+        <scene sceneID="4cP-qZ-uXK">
             <objects>
-                <viewController storyboardIdentifier="DataViewController" id="CWm-FV-hg5" customClass="DataViewController" customModule="Mad_Stats" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="zED-pP-7yK"/>
-                        <viewControllerLayoutGuide type="bottom" id="RWH-XI-tvI"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="dM6-2R-GiR">
+                <tableViewController id="3Tj-e6-012" customClass="DataViewController" customModule="Mad_Stats" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="66" sectionHeaderHeight="28" sectionFooterHeight="28" id="Xhb-gT-hVk">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Statistics" id="ONz-Yh-t2c">
-                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="7no-kM-0Yw">
-                            <connections>
-                                <segue destination="OjM-3y-hLF" kind="unwind" unwindAction="unwindToGames:" id="GEW-yu-LQx"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hIe-4S-5CH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="OjM-3y-hLF" userLabel="Exit" sceneMemberID="exit"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="StatCell" rowHeight="50" id="4i5-N5-Wks">
+                                <rect key="frame" x="0.0" y="92" width="600" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4i5-N5-Wks" id="pq0-ex-Lns">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="49.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stat" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6u0-zP-8sf">
+                                            <rect key="frame" x="148" y="8" width="212" height="33.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.070588235289999995" green="0.48627450979999998" blue="0.75686274509999996" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stat" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z8a-qz-hnB">
+                                            <rect key="frame" x="380" y="8" width="212" height="33.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.99215686270000003" green="0.66274509800000003" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STAT NAME" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRi-Nm-tly">
+                                            <rect key="frame" x="8" y="16" width="120" height="17.5"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Z8a-qz-hnB" firstAttribute="leading" secondItem="6u0-zP-8sf" secondAttribute="trailing" constant="20" id="4If-CZ-co6"/>
+                                        <constraint firstItem="lRi-Nm-tly" firstAttribute="centerY" secondItem="pq0-ex-Lns" secondAttribute="centerY" id="4iQ-IM-XbF"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Z8a-qz-hnB" secondAttribute="bottom" priority="750" id="6hz-Yt-Fa4"/>
+                                        <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="lRi-Nm-tly" secondAttribute="bottom" constant="8" id="7d6-ji-2qb"/>
+                                        <constraint firstItem="lRi-Nm-tly" firstAttribute="top" relation="greaterThanOrEqual" secondItem="pq0-ex-Lns" secondAttribute="topMargin" constant="8" id="7rp-5c-zQv"/>
+                                        <constraint firstItem="lRi-Nm-tly" firstAttribute="bottom" secondItem="pq0-ex-Lns" secondAttribute="bottomMargin" priority="750" id="9FS-Cu-SzL"/>
+                                        <constraint firstItem="Z8a-qz-hnB" firstAttribute="top" secondItem="pq0-ex-Lns" secondAttribute="topMargin" priority="750" id="9UR-RB-qhv"/>
+                                        <constraint firstItem="6u0-zP-8sf" firstAttribute="leading" secondItem="lRi-Nm-tly" secondAttribute="trailing" constant="20" id="AJ3-QT-HbK"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Z8a-qz-hnB" secondAttribute="trailing" id="BXX-RK-q5x"/>
+                                        <constraint firstItem="Z8a-qz-hnB" firstAttribute="top" relation="greaterThanOrEqual" secondItem="pq0-ex-Lns" secondAttribute="topMargin" id="Bpq-Mu-RqP"/>
+                                        <constraint firstItem="6u0-zP-8sf" firstAttribute="width" secondItem="Z8a-qz-hnB" secondAttribute="width" id="D0a-bE-rNO"/>
+                                        <constraint firstItem="6u0-zP-8sf" firstAttribute="centerY" secondItem="pq0-ex-Lns" secondAttribute="centerY" id="DbY-lc-ICK"/>
+                                        <constraint firstItem="lRi-Nm-tly" firstAttribute="leading" secondItem="pq0-ex-Lns" secondAttribute="leadingMargin" id="NqN-iV-vsg"/>
+                                        <constraint firstItem="Z8a-qz-hnB" firstAttribute="centerY" secondItem="pq0-ex-Lns" secondAttribute="centerY" id="QAU-mA-Jbk"/>
+                                        <constraint firstItem="6u0-zP-8sf" firstAttribute="top" secondItem="pq0-ex-Lns" secondAttribute="topMargin" priority="750" id="QU3-lc-2df"/>
+                                        <constraint firstItem="lRi-Nm-tly" firstAttribute="top" secondItem="pq0-ex-Lns" secondAttribute="topMargin" priority="750" id="WSb-I4-fuO"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="6u0-zP-8sf" secondAttribute="bottom" priority="750" id="diy-bO-Cji"/>
+                                        <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Z8a-qz-hnB" secondAttribute="bottom" id="lbv-hG-HmG"/>
+                                        <constraint firstItem="lRi-Nm-tly" firstAttribute="width" secondItem="pq0-ex-Lns" secondAttribute="width" multiplier="0.2" id="pDU-Pq-Lc6"/>
+                                        <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="6u0-zP-8sf" secondAttribute="bottom" id="rEv-vk-5nq"/>
+                                        <constraint firstItem="6u0-zP-8sf" firstAttribute="top" relation="greaterThanOrEqual" secondItem="pq0-ex-Lns" secondAttribute="topMargin" id="zsT-pp-4yc"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="3Tj-e6-012" id="PQi-3d-Cvv"/>
+                            <outlet property="delegate" destination="3Tj-e6-012" id="mYL-ep-h3J"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Statistics" id="4rR-8F-jX2"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="64W-dW-fHg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="500"/>
+            <point key="canvasLocation" x="755" y="500"/>
         </scene>
     </scenes>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
