--- a/Mad Stats/Card.storyboard
+++ b/Mad Stats/Card.storyboard
@@ -27,10 +27,11 @@
         <scene sceneID="4cP-qZ-uXK">
             <objects>
                 <tableViewController id="3Tj-e6-012" customClass="DataViewController" customModule="Mad_Stats" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="66" sectionHeaderHeight="28" sectionFooterHeight="28" id="Xhb-gT-hVk">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="66" sectionHeaderHeight="28" sectionFooterHeight="28" id="Xhb-gT-hVk">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="StatCell" rowHeight="50" id="4i5-N5-Wks" customClass="StatCell" customModule="Mad_Stats" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="92" width="600" height="50"/>
@@ -40,19 +41,19 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stat" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6u0-zP-8sf">
-                                            <rect key="frame" x="148" y="8" width="212" height="33.5"/>
+                                            <rect key="frame" x="155" y="8" width="208.5" height="33.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <color key="textColor" red="0.070588235289999995" green="0.48627450979999998" blue="0.75686274509999996" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stat" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z8a-qz-hnB">
-                                            <rect key="frame" x="380" y="8" width="212" height="33.5"/>
+                                            <rect key="frame" x="383.5" y="8" width="208.5" height="33.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <color key="textColor" red="0.99215686270000003" green="0.66274509800000003" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STAT NAME" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRi-Nm-tly">
-                                            <rect key="frame" x="8" y="16" width="120" height="17.5"/>
+                                            <rect key="frame" x="15" y="16" width="120" height="17.5"/>
                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -71,7 +72,7 @@
                                         <constraint firstItem="Z8a-qz-hnB" firstAttribute="top" relation="greaterThanOrEqual" secondItem="pq0-ex-Lns" secondAttribute="topMargin" id="Bpq-Mu-RqP"/>
                                         <constraint firstItem="6u0-zP-8sf" firstAttribute="width" secondItem="Z8a-qz-hnB" secondAttribute="width" id="D0a-bE-rNO"/>
                                         <constraint firstItem="6u0-zP-8sf" firstAttribute="centerY" secondItem="pq0-ex-Lns" secondAttribute="centerY" id="DbY-lc-ICK"/>
-                                        <constraint firstItem="lRi-Nm-tly" firstAttribute="leading" secondItem="pq0-ex-Lns" secondAttribute="leadingMargin" id="NqN-iV-vsg"/>
+                                        <constraint firstItem="lRi-Nm-tly" firstAttribute="leading" secondItem="pq0-ex-Lns" secondAttribute="leading" constant="15" id="NqN-iV-vsg"/>
                                         <constraint firstItem="Z8a-qz-hnB" firstAttribute="centerY" secondItem="pq0-ex-Lns" secondAttribute="centerY" id="QAU-mA-Jbk"/>
                                         <constraint firstItem="6u0-zP-8sf" firstAttribute="top" secondItem="pq0-ex-Lns" secondAttribute="topMargin" priority="750" id="QU3-lc-2df"/>
                                         <constraint firstItem="lRi-Nm-tly" firstAttribute="top" secondItem="pq0-ex-Lns" secondAttribute="topMargin" priority="750" id="WSb-I4-fuO"/>
