--- a/Mad Stats/Base.lproj/Main.storyboard
+++ b/Mad Stats/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.070588235294117646" green="0.48627450980392156" blue="0.75686274509803919" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="separatorColor" red="1" green="1" blue="1" alpha="0.30167025862068964" colorSpace="calibratedRGB"/>
+                        <color key="separatorColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
                         <inset key="separatorInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
                         <view key="tableFooterView" contentMode="scaleToFill" id="gHC-mJ-gcQ">
                             <rect key="frame" x="0.0" y="88" width="600" height="0.0"/>
