--- a/Mad Stats/Card.storyboard
+++ b/Mad Stats/Card.storyboard
@@ -26,7 +26,7 @@
         <!--Season Statistics-->
         <scene sceneID="4cP-qZ-uXK">
             <objects>
-                <tableViewController id="3Tj-e6-012" customClass="DataViewController" customModule="Mad_Stats" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="DataViewController" id="3Tj-e6-012" customClass="DataViewController" customModule="Mad_Stats" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="66" sectionHeaderHeight="28" sectionFooterHeight="28" id="Xhb-gT-hVk">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
